k8s/carrick-api.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: carrick-api
  labels:
    app: carrick-api
spec:
  #type: ClusterIP
  type: NodePort
  #type: LoadBalancer
  selector:
    app: carrick-api
  ports:
  - name: web
    protocol: TCP
    port: 5000
---
# Api
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carrick-api
  labels:
    app: carrick-api
spec:  
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: carrick-api
  template:
    metadata:
      labels:
        app: carrick-api
    spec:
      containers:
      - name: carrick-api
        image: gcr.io/pstracker-305808/carrick-api:tag
        imagePullPolicy: Always
        command: ["./carrick-js-api"]
---
